--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,13 @@ services:
   - docker
 
 before_install:
-  - docker build -t qha/react-test -f ./client/Dockerfile.dev ./client
+  - docker build -t quyenh2511/react-test -f ./client/Dockerfile.dev ./client
 
 script:
   - docker run -e CI=true qha/react-test npm test
 
 after_success:
-  - docker build -t qha/multi-client ./client
-  - docker build -t qha/multi-nginx ./nginx
-  - docker build -t qha/multi-server ./server
-  - docker build -t qha/multi-worker ./worker
+  - docker build -t quyenh2511/multi-client ./client
+  - docker build -t quyenh2511/multi-nginx ./nginx
+  - docker build -t quyenh2511/multi-server ./server
+  - docker build -t quyenh2511/multi-worker ./worker
