--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,7 +13,7 @@ services:
     restart: always
     build:
       dockerfile: Dockerfile.dev
-      context: ./iginx
+      context: nginx
     ports:
       - "3050:80"
   api:
