--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ services:
   postgres:
     image: "postgres:latest"
     environment:
-      - POSTGRES_PASSWORD=postgres_password
+      - POSTGRES_PASSWORD=admin
   redis:
     image: "redis:latest"
   nginx:
@@ -15,7 +15,7 @@ services:
       dockerfile: Dockerfile.dev
       context: nginx
     ports:
-      - "3050:80"
+      - "3000:80"
   api:
     build:
       dockerfile: Dockerfile.dev
@@ -29,7 +29,7 @@ services:
       - PGUSER=postgres
       - PGHOST=postgres
       - PGDATABASE=postgres
-      - PGPASSWORD=postgres_password
+      - PGPASSWORD=admin
       - PGPORT=5432
   client:
     build:
